<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">

    <TextView
        android:layout_width="27dp"
        android:layout_height="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@drawable/btn_back_arrow" />

    <TextView
        android:id="@+id/role_choose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_80"
        android:text="@string/select_role_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_18"/>

    <RelativeLayout
        android:id="@+id/role_content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/role_choose_title">

        <RelativeLayout
            android:id="@+id/broadcaster_layout"
            style="@style/select_role_block"
            android:onClick="onJoinAsBroadcaster">
            <ImageView
                android:id="@+id/select_role_icon_broadcaster"
                style="@style/select_role_block_icon"
                android:src="@drawable/ic_role_broadcaster"/>
            <RelativeLayout
                style="@style/select_role_block_content">
                <TextView
                    android:id="@+id/select_role_arrow_broadcaster"
                    style="@style/select_role_block_arrow"/>

                <TextView
                    android:id="@+id/select_role_title_broadcaster"
                    style="@style/select_role_block_title"
                    android:layout_toStartOf="@id/select_role_arrow_broadcaster"
                    android:layout_toLeftOf="@id/select_role_arrow_broadcaster"
                    android:text="@string/select_role_broadcaster" />

                <TextView
                    android:id="@+id/select_role_hint_broadcaster"
                    style="@style/select_role_block_hint"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/select_role_title_broadcaster"
                    android:text="@string/select_role_broadcaster_hint"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/screen_broadcaster_layout"
            android:layout_below="@id/broadcaster_layout"
            style="@style/select_role_block">
            <ImageView
                android:id="@+id/screen_select_role_icon_broadcaster"
                style="@style/select_role_block_icon"
                android:src="@drawable/ic_role_broadcaster"/>
            <RelativeLayout
                style="@style/select_role_block_content">
                <TextView
                    android:id="@+id/screen_select_role_arrow_broadcaster"
                    style="@style/select_role_block_arrow"/>

                <TextView
                    android:id="@+id/screen_select_role_title_broadcaster"
                    style="@style/select_role_block_title"
                    android:layout_toStartOf="@id/screen_select_role_arrow_broadcaster"
                    android:layout_toLeftOf="@id/screen_select_role_arrow_broadcaster"
                    android:text="@string/select_role_broadcaster" />

                <TextView
                    android:id="@+id/screen_select_role_hint_broadcaster"
                    style="@style/select_role_block_hint"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/screen_select_role_title_broadcaster"
                    android:text="@string/select_role_broadcaster_hint"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/audience_layout"
            style="@style/select_role_block"
            android:layout_below="@id/screen_broadcaster_layout"
            android:onClick="onJoinAsAudience">
            <ImageView
                android:id="@+id/select_role_icon_audience"
                style="@style/select_role_block_icon"
                android:src="@drawable/ic_role_audience"/>

            <RelativeLayout
                style="@style/select_role_block_content">
                <TextView
                    android:id="@+id/select_role_arrow_audience"
                    style="@style/select_role_block_arrow"/>
                <TextView
                    android:id="@+id/select_role_title_audience"
                    style="@style/select_role_block_title"
                    android:layout_toLeftOf="@id/select_role_arrow_audience"
                    android:layout_toStartOf="@id/select_role_arrow_audience"
                    android:text="@string/select_role_audience"/>
                <TextView
                    android:id="@+id/select_role_hint_audience"
                    style="@style/select_role_block_hint"
                    android:layout_below="@id/select_role_title_audience"
                    android:text="@string/select_role_audience_hint"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
